--- a/style.css
+++ b/style.css
@@ -1,104 +1,162 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    color: #fff;
-    font-family: "Plain Light";
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	color: #fff;
+	font-family: "Plain Light";
 }
-html,body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+	height: 100%;
+	width: 100%;
 }
 
 @keyframes anime {
-    0%{
-        font-family: "Plain Light";
-        -webkit-text-stroke: 1px #fff;
-        color: #fff;
-        font-weight: 500;
-        opacity: 1;
-    }
-    48%{
-        font-family: "Plain Light";
-        -webkit-text-stroke: 1px #fff;
-        color: #fff;
-        font-weight: 500;
-        opacity: 0;
-
-    }
-    50%{
-        font-family: "silk serif";
-        -webkit-text-stroke: 1px #fff;
-        color: transparent;
-        font-weight: 500;
-        opacity: 1;
-
-    }
-    100%{
-        font-family: "silk serif";
-        -webkit-text-stroke: 1px #fff;
-        color: transparent;
-        font-weight: 500;
-        opacity: 0;
-    }
+	0% {
+		font-family: "Plain Light";
+		-webkit-text-stroke: 1px #fff;
+		color: #fff;
+		font-weight: 500;
+		opacity: 1;
+	}
+	48% {
+		font-family: "Plain Light";
+		-webkit-text-stroke: 1px #fff;
+		color: #fff;
+		font-weight: 500;
+		opacity: 0;
+	}
+	50% {
+		font-family: "silk serif";
+		-webkit-text-stroke: 1px #fff;
+		color: transparent;
+		font-weight: 500;
+		opacity: 1;
+	}
+	100% {
+		font-family: "silk serif";
+		-webkit-text-stroke: 1px #fff;
+		color: transparent;
+		font-weight: 500;
+		opacity: 0;
+	}
 }
 
-#main{
-    position: relative;
-    background-color: #030303;
+#main {
+	position: relative;
+	background-color: #030303;
 }
-#page1{
-    height: 100vh;
-    width: 100%;
-    background-color: #151515;
+#page1 {
+	height: 100vh;
+	width: 100%;
+	background-color: #151515;
 }
-#loader{
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 999;
-    background-color: #0B0B0B;
-    padding: 25vh 10vw;
+#crsr {
+	height: 2.5vw;
+	width: 2.5vw;
+	border-radius: 50%;
+	background-color: #000;
+	border: 1px solid #ffffff7d;
+	position: fixed;
+	z-index: 99999;
+	mix-blend-mode: difference;
+	transform: translate(-50%, -50%);
+}
+#loader {
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	z-index: 999;
+	background-color: #0b0b0b;
+	padding: 25vh 10vw;
 }
 
-#line1-part1{
+#line1-part1 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1vw;
+}
+#line1-part1 h5,
+#line1-part1 h6 {
+	font-size: 3vw;
+	font-family: "silk serif";
+	font-weight: 100;
+}
+#line1-part1 h5 {
+	/* background-color: red; */
+	text-align: right;
+	width: 5vw;
+}
+.line h1 {
+	font-size: 6.5vw;
+	text-transform: uppercase;
+	font-weight: 900;
+}
+.line h2 {
+	font-size: 5vw;
+	text-transform: uppercase;
+	font-weight: 900;
+	/* animation-name: anime; */
+	opacity: 0;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+}
+.line {
+	/* background-color: red; */
+	height: fit-content;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	gap: 3vw;
+}
+
+#page1 #nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2.3vw 4.5vw;
+}
+#nav-part2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 3vw;
+}
+#nav-part2 h4 {
+	font-size: 0.8vw;
+	font-weight: 500;
+}
+.hero {
+	/* background-color: red; */
+	width: 73%;
+	margin-left: 27%;
+	height: fit-content;
+	overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 1vw;
 }
-#line1-part1 h5,#line1-part1 h6{
-    font-size: 3vw;
-    font-family: "silk serif";
-    font-weight: 100;
+.hero:nth-child(2) {
+	margin-top: 17vh;
 }
-#line1-part1 h5{
-    /* background-color: red; */
-    text-align: right;
-    width: 5vw;
+.hero h1 {
+	font-size: 7.2vw;
+	font-weight: 600;
+	text-transform: uppercase;
+	line-height: 7.2vw;
 }
-.line h1{
-    font-size: 6.5vw;
-    text-transform: uppercase;
-    font-weight: 900;
-   
-}
-.line h2{
-    font-size: 5vw;
-    text-transform: uppercase;
-    font-weight: 900;
-    /* animation-name: anime; */
-    opacity: 0;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
-.line{
-    /* background-color: red; */
-    height: fit-content;
-     overflow: hidden;
-     display: flex;
-     align-items: center;
-     justify-content: flex-start;
-     gap: 3vw;
 
+.hero h2,
+.hero h3 {
+	font-size: 7.2vw;
+	font-weight: 600;
+	text-transform: uppercase;
+	line-height: 7.2vw;
+}
+
+.hero h2:hover{
+    -webkit-text-stroke: 2px  #fff ;
+    color: transparent;
+    font-weight: 600;
 }
